--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Obsidian plugin for project management with timeline visualization and WBS structure",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "node esbuild.config.mjs production",
+    "dev": "node --no-warnings esbuild.config.mjs",
+    "build": "node --no-warnings esbuild.config.mjs production",
     "lint": "eslint src/",
     "test": "vitest"
   },
@@ -20,17 +20,18 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "builtin-modules": "^3.3.0",
-    "esbuild": "^0.19.8",
-    "eslint": "^8.55.0",
+    "@types/node": "^25.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "builtin-modules": "^4.0.0",
+    "esbuild": "^0.27.2",
+    "eslint": "^9.39.2",
     "obsidian": "latest",
-    "typescript": "^5.3.2",
-    "vitest": "^1.0.0"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
-    "date-fns": "^3.0.0"
+    "date-fns": "^4.1.0",
+    "tslib": "^2.8.1"
   }
 }
